Made the scores page into a similar tabbed view to the schedule page.

--- a/Main.storyboard
+++ b/Main.storyboard
@@ -639,6 +639,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="dlu-GT-xaJ"/>
+        <segue reference="cjd-Rj-vOd"/>
     </inferredMetricsTieBreakers>
 </document>
